--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.0.11",
+    "@stripe/stripe-js": "^5.6.0",
+    "jwt-decode": "^4.0.0",
     "solid-js": "^1.9.2",
     "vinxi": "^0.4.3"
   },
